--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
     <div class="container-fluid" data-aos-easing="ease-in-out">
         <div class="row">
             <div class="col-lg-12 col-md-12 img banner-image pb-5">
-                <div class="banner-title">  
+                <div class="banner-title text-center">
                     <h3 class="">Our Products</h3>
                     <p>Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
-                    <a href="#" type="button" class="btn btn-danger services">View Cart</a>
+                    <!-- <a href="#" type="button" class="btn btn-danger services">View Cart</a> -->
                     <!-- Category Dropdown Start -->
-                    <div class="categaroyDropdown">
+                    <!-- <div class="categaroyDropdown">
                         <button class="btn btn-danger product">Product Categories<i class="fas fa-chevron-down"></i>
                       
                             <ul class="productcategories m-0 p-0 rounded">
@@ -69,7 +69,7 @@
                             </ul>
 
                         </button>
-                      </div>
+                    </div> -->
                     <!-- Category Dropdown Start -->
                 </div>
             </div>
@@ -121,7 +121,7 @@
                 <h3 class="ms-3">Category Type 1</h3>
             </div>
 
-            <div class="col-4 p-0">
+            <div class="col-sm-12 col-md-6 col-lg-4 p-0">
                 <div class="product text-center">
                     <div class="productImg">
                         <img class="img-fluid rounded" src="images/store-984393_1920.jpg" alt="">
@@ -135,7 +135,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 p-0">
+            <div class="col-sm-12 col-md-6 col-lg-4 p-0">
                 <div class="product text-center">
                     <div class="productImg">
                         <img class="img-fluid rounded" src="images/store-984393_1920.jpg" alt="">
@@ -149,7 +149,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 p-0">
+            <div class="col-sm-12 col-md-6 col-lg-4 p-0">
                 <div class="product text-center">
                     <div class="productImg">
                         <img class="img-fluid rounded" src="images/store-984393_1920.jpg" alt="">
@@ -163,35 +163,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 p-0">
-                <div class="product text-center">
-                    <div class="productImg">
-                        <img class="img-fluid rounded" src="images/store-984393_1920.jpg" alt="">
-                    </div>
-                    <div class="profuctTxt my-3">
-                        <h4>Product Name</h4>
-                    </div>
-                    <div class="productBtns mb-5">
-                        <button class="btn prdtOrder">Order Now</button>
-                        <button class="btn prdtDetail">Details</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4 p-0">
-                <div class="product text-center">
-                    <div class="productImg">
-                        <img class="img-fluid rounded" src="images/store-984393_1920.jpg" alt="">
-                    </div>
-                    <div class="profuctTxt my-3">
-                        <h4>Product Name</h4>
-                    </div>
-                    <div class="productBtns mb-5">
-                        <button class="btn prdtOrder">Order Now</button>
-                        <button class="btn prdtDetail">Details</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4 p-0">
+            <div class="col-sm-12 col-md-6 col-lg-4 p-0">
                 <div class="product text-center">
                     <div class="productImg">
                         <img class="img-fluid rounded" src="images/store-984393_1920.jpg" alt="">
